# TronCheckService

./: .gitignore  Dockerfile  Migrations  README.md  config.env  docker-compose.yml  docker.env  env.py  main.py  mytypes.py  openapi.yaml  pyproject.toml  requirements.txt
checker/: __init__.py  _types.py  main.py
database/: __init__.py  engine.py  main.py  types.py
migrations/: env.py
migrations/versions/: ee1fb2ac0e53_add_accountdata.py
tests/: database_population_test.py  endpoint_integration_test.py
