[project]
name = "troncheckservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "pydantic>=2.11.3",
    "pymysql>=1.1.1",
    "pytest>=8.3.5",
    "sqlmodel>=0.0.24",
    "tronpy>=0.5.0",
    "uvicorn>=0.34.0",
]
